@@ -1,6 +1,11 @@
 
 TinyButStrong 1.8.0 beta
 
+2011-12-29, change-log:
+=======================
+
+- 'strconv' alias of 'htmlconv'
+
 2011-12-23, change-log:
 =======================
 
